# ubloxcfg

./: .ackrc  .clang-format  .gdbinit  .gitignore  CMakeLists.txt  COPYING  Doxyfile  LICENSE  Makefile  README.md  build.mk  cfgtool.c  cfgtool.h  cfgtool.txt  cfgtool_cfg2rx.c  cfgtool_cfg2ubx.c  cfgtool_cfg2ubx.h  cfgtool_cfginfo.c  cfgtool_cfginfo.h  cfgtool_parse.c  cfgtool_parse.h  cfgtool_reset.c  cfgtool_rx2cfg.c  cfgtool_rx2cfg.h  cfgtool_rxtest.c  cfgtool_rxtest.h  cfgtool_uc2cfg.c  config.h.in  config.h.pl  crc24q.COPYING  crc24q.c  crc24q.h  enu.txt  ff_debug.c  ff_debug.h  ff_nmea.c  ff_nmea.h  ff_parser.c  ff_parser.h  ff_port.c  (+18 more)
.github/workflows/: build-library.yml  ci.yml  main.yml
cfggui/: README.md  cfggui.cpp  cfggui.supp  data.cpp  data.hpp  database.cpp  database.hpp  guitodo.md  logfile.cpp  logfile.hpp  maps.conf  maptiles.cpp  maptiles.hpp  platform.hpp  plattform.cpp  receiver.cpp  receiver.hpp  tilefail.xcf  tileload.xcf  tiletest.xcf
cfggui/assets/: tileload.xcf  tilenope.xcf
cfggui/gui/: gui_app.cpp  gui_app.hpp  gui_data.cpp  gui_data.hpp  gui_fonts.cpp  gui_fonts.hpp  gui_inc.hpp  gui_map.cpp  gui_map.hpp  gui_notify.cpp  gui_notify.hpp  gui_settings.cpp  gui_settings.hpp  gui_settings_colours.hpp  gui_stuff.cpp  gui_stuff.hpp  gui_utils.cpp  gui_utils.hpp  gui_widget.cpp  gui_widget.hpp  gui_win.cpp  gui_win.hpp
cfggui/gui_msg/: gui_msg.cpp  gui_msg.hpp  gui_msg_ubx_esf_meas.cpp  gui_msg_ubx_esf_meas.hpp  gui_msg_ubx_esf_status.cpp  gui_msg_ubx_esf_status.hpp  gui_msg_ubx_mon_comms.cpp  gui_msg_ubx_mon_comms.hpp  gui_msg_ubx_mon_hw.cpp  gui_msg_ubx_mon_hw.hpp  gui_msg_ubx_mon_hw2.cpp  gui_msg_ubx_mon_hw2.hpp  gui_msg_ubx_mon_hw3.cpp  gui_msg_ubx_mon_hw3.hpp  gui_msg_ubx_mon_rf.cpp  gui_msg_ubx_mon_rf.hpp  gui_msg_ubx_mon_span.cpp  gui_msg_ubx_mon_span.hpp  gui_msg_ubx_mon_ver.cpp  gui_msg_ubx_mon_ver.hpp  gui_msg_ubx_nav_cov.cpp  gui_msg_ubx_nav_cov.hpp  gui_msg_ubx_nav_dop.cpp  gui_msg_ubx_nav_dop.hpp  gui_msg_ubx_rxm_rawx.cpp  gui_msg_ubx_rxm_rawx.hpp  gui_msg_ubx_rxm_rtcm.cpp  gui_msg_ubx_rxm_rtcm.hpp  gui_msg_ubx_rxm_sfrbx.cpp  gui_msg_ubx_rxm_sfrbx.hpp  gui_msg_ubx_rxm_spartn.cpp  gui_msg_ubx_rxm_spartn.hpp  gui_msg_ubx_tim_tm2.cpp  gui_msg_ubx_tim_tm2.hpp
cfggui/gui_widget/: gui_widget_filter.cpp  gui_widget_filter.hpp  gui_widget_log.cpp  gui_widget_log.hpp  gui_widget_map.cpp  gui_widget_map.hpp  gui_widget_opengl.cpp  gui_widget_opengl.hpp  gui_widget_tabbar.cpp  gui_widget_tabbar.hpp  gui_widget_table.cpp  gui_widget_table.hpp
cfggui/gui_win/: gui_win.cpp  gui_win.hpp  gui_win_app.cpp  gui_win_app.hpp  gui_win_experiment.cpp  gui_win_experiment.hpp  gui_win_filedialog.cpp  gui_win_filedialog.hpp  gui_win_multi.cpp  gui_win_multi.hpp  gui_win_ntrip.cpp  gui_win_ntrip.hpp  gui_win_play.cpp  gui_win_play.hpp  gui_win_receiver.cpp  gui_win_receiver.hpp
cfggui/gui_win_data/: gui_win_data.cpp  gui_win_data.hpp  gui_win_data_3d.cpp  gui_win_data_3d.hpp  gui_win_data_config.cpp  gui_win_data_config.hpp  gui_win_data_custom.cpp  gui_win_data_custom.hpp  gui_win_data_epoch.cpp  gui_win_data_epoch.hpp  gui_win_data_fwupdate.cpp  gui_win_data_fwupdate.hpp  gui_win_data_inc.hpp  gui_win_data_inf.cpp  gui_win_data_inf.hpp  gui_win_data_legend.cpp  gui_win_data_legend.hpp  gui_win_data_log.cpp  gui_win_data_log.hpp  gui_win_data_map.cpp  gui_win_data_map.hpp  gui_win_data_messages.cpp  gui_win_data_messages.hpp  gui_win_data_plot.cpp  gui_win_data_plot.hpp  gui_win_data_satellites.cpp  gui_win_data_satellites.hpp  gui_win_data_scatter.cpp  gui_win_data_scatter.hpp  gui_win_data_signals.cpp  gui_win_data_signals.hpp  gui_win_data_spectrum.cpp  gui_win_data_spectrum.hpp  gui_win_data_stats.cpp  gui_win_data_stats.hpp
cfggui/gui_win_input/: gui_win_input.cpp  gui_win_input.hpp  gui_win_input_logfile.cpp  gui_win_input_logfile.hpp  gui_win_input_receiver.cpp  gui_win_input_receiver.hpp
cfggui/input/: input.cpp  input.hpp  input_data.cpp  input_data.hpp  input_logfile.cpp  input_logfile.hpp  input_receiver.cpp  input_receiver.hpp
cfggui/stuff/: data.cpp  data.hpp  database.cpp  database.hpp  glmatrix.cpp  glmatrix.hpp  logfile.cpp  logfile.hpp  mapparams.cpp  mapparams.hpp  maptiles.cpp  maptiles.hpp  matrix.cpp  matrix.hpp  ntripclient.cpp  ntripclient.hpp  opengl.cpp  opengl.hpp  platform.cpp  platform.hpp  plattform.cpp  receiver.cpp  receiver.hpp
cfgtool/: CMakeLists.txt  README.md  cfggui.cpp  cfgtool.c  cfgtool.txt  cfgtool_bin2hex.c  cfgtool_bin2hex.h  cfgtool_cfg2rx.c  cfgtool_cfg2rx.h  cfgtool_cfg2ubx.c  cfgtool_cfg2ubx.h  cfgtool_cfginfo.c  cfgtool_cfginfo.h  cfgtool_cmd2rx.c  cfgtool_cmd2rx.h  cfgtool_dump.c  cfgtool_dump.h  cfgtool_parse.c  cfgtool_parse.h  cfgtool_reset.c  cfgtool_reset.h  cfgtool_rx2cfg.c  cfgtool_rx2cfg.h  cfgtool_rxtest.c  cfgtool_status.c  cfgtool_status.h  cfgtool_uc2cfg.c  cfgtool_uc2cfg.h  cfgtool_util.c  cfgtool_util.h
cmake/: CMakeLists.txt  config.cmake.in  config.pc.in  setup.cmake  ubloxcfg.pc.in
contrib/: Makefile  main.c
dev-test/: main.c
ff/: CMakeLists.txt  README.md  ff_conffile.cpp  ff_conffile.hpp  ff_cpp.cpp  ff_cpp.h  ff_cpp.hpp  ff_crc.c  ff_crc.h  ff_crc.txt  ff_debug.c  ff_debug.h  ff_epoch.c  ff_epoch.h  ff_nmea.c  ff_nmea.h  ff_novatel.c  ff_novatel.h  ff_parser.c  ff_parser.h  ff_port.c  ff_port.h  ff_rtcm3.c  ff_rtcm3.h  ff_rx.c  ff_rx.h  ff_spartn.c  ff_spartn.h  ff_stuff.c  ff_stuff.h  ff_thread.cpp  ff_thread.hpp  ff_time.c  ff_time.h  ff_trafo.c  ff_trafo.h  ff_ubx.c  ff_ubx.h  ff_utils.cpp  ff_utils.hpp
test/: test_ubloxcfg.c
tools/: 99-ftdi-ublox.rules  evk-f9p-base.cfg  fake_ubx_esf_meas.ubx  fake_ubx_esf_status.ubx  fake_ubx_mon_hw.ubx  fwdownload.txt  make_fake_ubxesfmeas.c  make_fake_ubxesfstatus.c  make_fake_ubxmonhw.c
ubloxcfg/: CMakeLists.txt  Doxyfile  README.md  libubloxcfg.pc  ubloxcfg-50-ublox.jsonc  ubloxcfg-99-test.jsonc  ubloxcfg.c  ubloxcfg.h  ubloxcfg.json  ubloxcfg_gen.c  ubloxcfg_gen.h  ubloxcfg_gen.pl
ubloxcfg/test/: test_ubloxcfg.c
